--- a/cesi-zen-ionic/src/app/app.component.scss
+++ b/cesi-zen-ionic/src/app/app.component.scss
@@ -1,5 +1,58 @@
 ion-menu ion-content {
-  --background: var(--ion-item-background, var(--ion-background-color, #fff));
+  --background: var(--ion-color-light);
+}
+
+ion-menu ion-toolbar {
+  --background: var(--ion-color-primary);
+  --color: var(--ion-color-light);
+}
+
+ion-menu ion-list {
+  padding: 20px 0;
+}
+
+ion-menu ion-list-header {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: var(--ion-color-primary);
+  margin-bottom: 10px;
+}
+
+ion-menu ion-note {
+  margin: 0 16px 20px;
+  font-size: 0.9rem;
+  color: var(--ion-color-medium);
+}
+
+ion-menu ion-item {
+  --padding-start: 16px;
+  --padding-end: 16px;
+  --min-height: 50px;
+  margin: 4px 0;
+  border-radius: 4px;
+}
+
+ion-menu ion-item.selected {
+  --background: var(--ion-color-primary-tint);
+  --color: var(--ion-color-primary);
+}
+
+ion-menu ion-icon {
+  margin-right: 10px;
+  color: var(--ion-color-medium);
+}
+
+ion-menu ion-item.selected ion-icon {
+  color: var(--ion-color-primary);
+}
+
+ion-menu-button {
+  --color: var(--ion-color-primary);
+}
+
+ion-header ion-toolbar {
+  --background: var(--ion-color-light);
+  --color: var(--ion-color-dark);
 }
 
 ion-menu.md ion-content {
@@ -11,15 +64,6 @@ ion-menu.md ion-content {
 
 ion-menu.md ion-list {
   padding: 20px 0;
-}
-
-ion-menu.md ion-note {
-  margin-bottom: 30px;
-}
-
-ion-menu.md ion-list-header,
-ion-menu.md ion-note {
-  padding-left: 10px;
 }
 
 ion-menu.md ion-list#inbox-list {
