--- a/cesi-zen-ionic/src/app/pages/exercices/exercice-list/exercice-list.page.html
+++ b/cesi-zen-ionic/src/app/pages/exercices/exercice-list/exercice-list.page.html
@@ -1,4 +1,5 @@
-<!-- src/app/pages/exercises/exercise-list/exercise-list.page.html -->
+<!--
+&lt;!&ndash; src/app/pages/exercices/exercice-list/exercice-list.page.html &ndash;&gt;
 <ion-header>
   <ion-toolbar>
     <ion-title>
@@ -52,6 +53,73 @@
 
   <div *ngIf="exercises.length === 0 && !error" class="empty-container">
     <ion-spinner name="circles"></ion-spinner>
+    <p>Chargement des exercices...</p>
+  </div>
+</ion-content>
+-->
+
+
+
+<!-- exercice-list.page.html -->
+<ion-header class="ion-no-border">
+  <ion-toolbar>
+    <ion-title>
+      Respiration
+    </ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content>
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+
+  <div class="header-container">
+    <h1>Exercices de Respiration</h1>
+    <p>La cohérence cardiaque est une technique de respiration qui permet de réguler votre rythme cardiaque et de réduire le stress. Choisissez un exercice pour commencer.</p>
+  </div>
+
+  <div *ngIf="error" class="error-container">
+    <ion-icon name="alert-circle-outline"></ion-icon>
+    <p>{{ error }}</p>
+    <ion-button (click)="loadExercises()">Réessayer</ion-button>
+  </div>
+
+  <ion-grid *ngIf="exercises.length > 0" class="exercise-grid">
+    <ion-row>
+      <ion-col size="12" size-md="6" size-lg="4" *ngFor="let exercise of exercises">
+        <ion-card class="exercise-card" (click)="startExercise(exercise.id)">
+          <ion-card-header>
+            <ion-card-title>{{ exercise.name }}</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            <div class="timing-container">
+              <div class="timing">
+                <ion-icon name="arrow-up-outline"></ion-icon>
+                <span>{{ exercise.inspirationDuration }}s</span>
+              </div>
+              <div class="timing" *ngIf="exercise.holdDuration > 0">
+                <ion-icon name="pause-outline"></ion-icon>
+                <span>{{ exercise.holdDuration }}s</span>
+              </div>
+              <div class="timing">
+                <ion-icon name="arrow-down-outline"></ion-icon>
+                <span>{{ exercise.expirationDuration }}s</span>
+              </div>
+            </div>
+            <p class="description">{{ exercise.description }}</p>
+            <ion-button expand="block" class="start-button">
+              Commencer l'exercice
+              <ion-icon name="play-outline" slot="end"></ion-icon>
+            </ion-button>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <div *ngIf="exercises.length === 0 && !error" class="empty-container">
+    <ion-spinner name="crescent"></ion-spinner>
     <p>Chargement des exercices...</p>
   </div>
 </ion-content>
